--- a/src/styles/scss/_basic.scss
+++ b/src/styles/scss/_basic.scss
@@ -21,8 +21,8 @@ html {
   }
 
   ::-webkit-scrollbar {
-    width: 12px;
-    height: 12px;
+    width: 8px;
+    height: 8px;
   }
 
   ::-webkit-scrollbar-thumb {
