--- a/src/styles/scss/_main.scss
+++ b/src/styles/scss/_main.scss
@@ -19,7 +19,13 @@
     transition: background-color 400ms ease-in-out, width 200ms ease-in-out;
     border-right: 1px solid var(--main-gray-dark);
     z-index: 2;
-    overflow: visible;
+    overflow-x: visible;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      width: 4px;
+      height: 4px;
+    }
 
     @media (max-width: $tablet-breakpoint) {
       position: absolute;
