--- a/src/styles/scss/_modal.scss
+++ b/src/styles/scss/_modal.scss
@@ -31,14 +31,6 @@
     transition: 0ms;
   }
 
-  &::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: var(--main-color-light);
-  }
-
   &::backdrop {
     background-color: var(--black);
     opacity: 0.5;
